# py-io-hook

./: .gitignore  CMakeLists.txt  README.md  setup.py
src/: main.cpp  system.hpp  uiohook_worker.c  uiohook_worker.h
tests/: test_io_events.py
